nldl_derive/tests/ui/deserializable/nla-type-missing-wildcard-on-deserialize-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/deserializable/nla-type-missing-wildcard-on-deserialize-fails.rs:1:28
  |
1 | #[derive(Debug, PartialEq, nldl::attr::Deserialize)]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: One variant must be marked with #[nla_type(_)] for wildcard handling. None found.
